image dynamic url

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <div class="wrapper d-flex justify-content-between">
                     <div class="government_text_left d-flex">
                         <ul class="list-unstyled d-flex my-auto">
-                            <li><img src="images/india_flag.svg" alt="indian flag"> &nbsp;&nbsp;<span> Government of
+                            <li><img src={% static "images/india_flag.svg" %} alt="indian flag"> &nbsp;&nbsp;<span> Government of
                                     India</span></li>
                             <li class="mobile_hidden"><span>Tue, 10 Mar, 2020</span>
                             <li>
@@ -33,12 +33,12 @@
                             <li>Skip to Main Content</li>
                             <li><a href="#"><span>A</span><span class="line"></span><span
                                         class="red-circle"></span><span>A</span></a></li>
-                            <li><a href="#"><img src="images/comment.svg"
+                            <li><a href="#"><img src={% static "images/comment.svg" %}
                                         alt="comment section">&nbsp;&nbsp;&nbsp;Feedback</a>
                             </li>
-                            <li><a href="#"><img src="images/facebook.svg" alt="facebook section"></a></li>
-                            <li><a href="#"><img src="images/twitter.svg" alt="twitter section"></a></li>
-                            <li><a href="#"><img src="images/youtube.svg" alt="youtube section"></a></li>
+                            <li><a href="#"><img src={% static "images/facebook.svg" %} alt="facebook section"></a></li>
+                            <li><a href="#"><img src={% static "images/twitter.svg" %} alt="twitter section"></a></li>
+                            <li><a href="#"><img src={% static "images/youtube.svg" %} alt="youtube section"></a></li>
                             <li><span class="choose_language">English</span></li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="wrapper d-flex justify-content-between">
                     <div class="left_side d-flex">
                         <figure class="logo d-flex">
-                            <a href="#" class=" my-auto"><img class="img-fluid" src="images/logo.png"
+                            <a href="#" class=" my-auto"><img class="img-fluid" src={% static "images/logo.png" %}
                                     alt="logo for the website"></a>
                         </figure>
                         <div class="company_name my-auto">
@@ -58,15 +58,15 @@
                         </div>
                     </div>
                     <figure>
-                        <img src="images/bharat_mahatta.png" alt="bharat mahatta image">
+                        <img src={% static "images/bharat_mahatta.png" %} alt="bharat mahatta image">
                     </figure>
                     <figure>
-                        <img src="images/celebration_of_mahatta.png" class="img-fluid"
+                        <img src={% static "images/celebration_of_mahatta.png" %} class="img-fluid"
                             alt="15 years celebrating the mahatha">
                     </figure>
                     <form class="search_field">
                         <input type="search" placeholder="search">
-                        <span class="search_icon"><img src="images/search.svg" alt="searching purpose"
+                        <span class="search_icon"><img src={% static "images/search.svg" %} alt="searching purpose"
                                 class="img-fluid"></span>
                     </form>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="col-sm-6 col-md-7 col-lg-7">
                         <div class="scuberscriber_block d-flex">
                             <figure>
-                                <img src="images/mail.svg" alt="subscriber mail deatil" class="img-fluid">
+                                <img src={% static "images/mail.svg" %} alt="subscriber mail deatil" class="img-fluid">
                             </figure>
                             <div>
                                 <h2 class="heading">Subscribe to Our Newsletter</h2>
@@ -118,7 +118,7 @@
                         <div class="subscriber_input_field my-auto">
                             <form>
                                 <input type="email" class="email_id form-control" placeholder="Enter your email id">
-                                <span><img src="images/send.svg" alt="send the mail"></span>
+                                <span><img src={% static "images/send.svg" %} alt="send the mail"></span>
                             </form>
                         </div>
                     </div>
