--- a/templates/cssfiles.html
+++ b/templates/cssfiles.html
@@ -1,3 +1,6 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static 'css/libraries/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
