current day & date added dynamically

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                         <ul class="list-unstyled d-flex my-auto">
                             <li><img src={% static "images/india_flag.svg" %} alt="indian flag"> &nbsp;&nbsp;<span> Government of
                                     India</span></li>
-                            <li class="mobile_hidden"><span>Tue, 10 Mar, 2020</span>
+                            <li class="mobile_hidden"><span>{% now "D, jS F, Y" %}</span>
                             <li>
                         </ul>
                     </div>
