multilingual support added

--- a/templates/cms/case_history_count.html
+++ b/templates/cms/case_history_count.html
@@ -6,7 +6,7 @@
                 <div class="section_block d-flex justify-content-between">
                     <div class="text_block">
                         <p class="number">1200</p>
-                        <span>Total No of Case Registered</span>
+                        <span>{% trans 'Total No of Case Registered' %}</span>
                     </div>
                     <div class="patient_block">
                         <img src={% static "images/patient.svg" %} alt="no of patient registration details" class="img-fluid">
@@ -17,7 +17,7 @@
                 <div class="section_block d-flex justify-content-between">
                     <div class="text_block">
                         <p class="number">923</p>
-                        <span>Total No of Case Shortlisted by CCRH</span>
+                        <span>{% trans 'Total No of Case Shortlisted by CCRH' %}</span>
                     </div>
                     <div class="patient_list">
                         <img src={% static "images/patient_list.svg" %} alt="no of patient shortlisted details" class="img-fluid">
@@ -27,8 +27,8 @@
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="section_block d-flex justify-content-between">
                     <div class="text_block">
-                        <p class="number">e-Tutorial</p>
-                        <span>Introduce complex topics</span>
+                        <p class="number">{% trans 'e-Tutorial' %}</p>
+                        <span>{% trans 'Introduce complex topics' %}</span>
                     </div>
                     <div class="patient_topics">
                         <img src={% static "images/paper.svg" %} alt="complex topics" class="img-fluid">
