--- a/templates/cms/media.html
+++ b/templates/cms/media.html
@@ -4,8 +4,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="news_heading d-flex justify-content-between">
-                        <h2>Media</h2>
-                        <button class="all_news">Expand All</button>
+                        <h2>{% trans 'Media' %}</h2>
+                        <button class="all_news">{% trans 'Expand All' %}</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
@@ -18,7 +18,7 @@
                                     </figure>
                                     <div class="media_content">
                                         <span class="media_line"></span>
-                                        <p>Inaugural photographs NHRIMH</p>
+                                        <p>{% trans 'Inaugural photographs NHRIMH' %}</p>
                                     </div>
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
                                     </figure>
                                     <div class="media_content">
                                         <span class="media_line"></span>
-                                        <p>Indo-Japan Seminar</p>
+                                        <p>{% trans 'Indo-Japan Seminar' %}</p>
                                     </div>
                                 </div>
                             </div>
@@ -40,7 +40,7 @@
                                     </figure>
                                     <div class="media_content">
                                         <span class="media_line"></span>
-                                        <p>CCRH VISITORS 2017</p>
+                                        <p>{% trans 'CCRH VISITORS 2017' %}</p>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +51,7 @@
                                     </figure>
                                     <div class="media_content">
                                         <span class="media_line"></span>
-                                        <p>DDPR CRI(H) Noida</p>
+                                        <p>{% trans 'DDPR CRI(H) Noida' %}</p>
                                     </div>
                                 </div>
                             </div>
