--- a/templates/cms/news.html
+++ b/templates/cms/news.html
@@ -5,8 +5,8 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
                 <div class="news_block_container">
                     <div class="news_heading d-flex justify-content-between">
-                        <h2><a href="#">Latest News</a></h2>
-                        <button class="all_news">All News</button>
+                        <h2><a href="#">{% trans 'Latest News' %}</a></h2>
+                        <button class="all_news">{% trans 'All News' %}</button>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6">
@@ -15,8 +15,8 @@
                                     <img src={% static "images/news_of_goa_government.png" %} alt="news of goa government" class="img-fluid">
                                 </figure>
                                 <div>
-                                    <p class="heading">News</p>
-                                    <p>AYUSH clinic to be setup at GIM Ribandar Goa government</p>
+                                    <p class="heading">{% trans 'News' %}</p>
+                                    <p>{% trans 'AYUSH clinic to be setup at GIM Ribandar Goa government' %}</p>
                                     <span>2 Jan, 2020</span>
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
                                         <img src={% static "images/Coronavirus.png" %} alt="corona virus advice from homopathic doctor" class="img-fluid">
                                     </figure>
                                     <div>
-                                        <p>Coronavirus – advice from the India homeopathic Community</p>
+                                        <p>{% trans 'Coronavirus – advice from the India homeopathic Community' %}</p>
                                         <span>2 Jan, 2020</span>
                                     </div>
                                 </div>
@@ -38,7 +38,7 @@
                                         <img src={% static "images/Prakash_Javadekar_PTI.png" %} alt="bill on homeopathy council cabinet approval" class="img-fluid">
                                     </figure>
                                     <div>
-                                        <p>Amendment To Bill On Homeopathy Council Gets Cabinet Approval. ...</p>
+                                        <p>{% trans 'Amendment To Bill On Homeopathy Council Gets Cabinet Approval.' %}</p>
                                         <span>2 Jan, 2020</span>
                                     </div>
                                 </div>
@@ -47,7 +47,7 @@
                                         <img src={% static "images/different-college-entrance.png" %} alt="different college of entrance exam" class="img-fluid">
                                     </figure>
                                     <div>
-                                        <p>AYUSH Post Graduate Entrance Test Notification On January 1.</p>
+                                        <p>{% trans 'AYUSH Post Graduate Entrance Test Notification On January 1.' %}</p>
                                         <span>2 Jan, 2020</span>
                                     </div>
                                 </div>
@@ -60,34 +60,34 @@
             <!-- latest download section start -->
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="news_heading">
-                    <h2><a href="#">Downloads</a></h2>
+                    <h2><a href="#">{% trans 'Downloads' %}</a></h2>
                 </div>
                 <div class="download_section">
                     <div class="news_section">
                         <div>
-                            <p class="heading">RESULT</p>
-                            <p>Result of Junior/Senior Research Fellow</p>
+                            <p class="heading">{% trans 'RESULT' %}</p>
+                            <p>{% trans 'Result of Junior/Senior Research Fellow' %}</p>
                             <span>2 Jan, 2020</span>
                         </div>
                     </div>
                     <div class="news_section">
                         <div>
-                            <p class="heading">tender</p>
-                            <p>Corrigendum for schedule of work / BOQ in ...</p>
+                            <p class="heading">{% trans 'tender' %}</p>
+                            <p>{% trans 'Corrigendum for schedule of work / BOQ in' %}</p>
                             <span>2 Jan, 2020</span>
                         </div>
                     </div>
                     <div class="news_section">
                         <div>
-                            <p class="heading">research</p>
-                            <p>Engagement of Junior Research Fellow</p>
+                            <p class="heading">{% trans 'research' %}</p>
+                            <p>{% trans 'Engagement of Junior Research Fellow' %}</p>
                             <span>2 Jan, 2020</span>
                         </div>
                     </div>
                     <div class="news_section">
                         <div>
-                            <p class="heading">QUotation</p>
-                            <p>Call of item Rate Quotation for Supply</p>
+                            <p class="heading">{% trans 'Quotation' %}</p>
+                            <p>{% trans 'Call of item Rate Quotation for Supply' %}</p>
                             <span>2 Jan, 2020</span>
                         </div>
                     </div>
