--- a/templates/cms/quick_link.html
+++ b/templates/cms/quick_link.html
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="news_heading d-flex justify-content-between">
-                        <h2>Quick Links</h2>
-                        <button class="all_news">Expand All</button>
+                        <h2>{% trans 'Quick Links' %}</h2>
+                        <button class="all_news">{% trans 'Expand All' %}</button>
                     </div>
                     <div class="owl-carousel links_block" id="quickLinks">
                         <div class="quick_link_sectio">
@@ -15,7 +15,7 @@
                                 <img src={% static "images/interior-laboratory.png" %} alt="interior laboratory research center" class="img-fluid">
                             </figure>
                             <div>
-                                <p>Intramural Research (IMR)</p>
+                                <p>{% trans 'Intramural Research (IMR)' %}</p>
                             </div>
                         </div>
                         <div class="quick_link_sectio">
@@ -23,7 +23,7 @@
                                 <img src={% static "images/doctors-nurses-coordinate.png" %} alt="doctors nurses coordinate hands has a team" class="img-fluid">
                             </figure>
                             <div>
-                                <p>International cooperation / MoUs</p>
+                                <p>{% trans 'International cooperation / MoUs' %}</p>
                             </div>
                         </div>
                         <div class="quick_link_sectio">
@@ -31,7 +31,7 @@
                                 <img src={% static "images/alternative-medicine.png" %} alt="alternative medicine concept with natural treatment" class="img-fluid">
                             </figure>
                             <div>
-                                <p>National Collaborations with Homoeopathic ... Colleges / National MoUs</p>
+                                <p>{% trans 'National Collaborations with Homoeopathic ... Colleges / National MoUs' %}</p>
                             </div>
                         </div>
                         <div class="quick_link_sectio">
@@ -39,7 +39,7 @@
                                 <img src={% static "images/herbal-organic-medicine.png" %} alt="herbal organic medicine product" class="img-fluid">
                             </figure>
                             <div>
-                                <p>Expression of Interest for Collaborative Research</p>
+                                <p>{% trans 'Expression of Interest for Collaborative Research' %}</p>
                             </div>
                         </div>
                         <div class="quick_link_sectio">
@@ -47,7 +47,7 @@
                                 <img src={% static "images/homeopathic-globules.png" %} alt="homeopathic globules glass bottle" class="img-fluid">
                             </figure>
                             <div>
-                                <p>Extra Mural Research (EMR)</p>
+                                <p>{% trans 'Extra Mural Research (EMR)' %}</p>
                             </div>
                         </div>
                     </div>
