--- a/templates/jsfiles.html
+++ b/templates/jsfiles.html
@@ -3,5 +3,6 @@
 <script src="{% static 'js/libraries/jquery-3.3.1.slim.min.js' %}"></script>
 <script src="{% static 'js/libraries/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/libraries/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/libraries/jquery.validate.min.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     
