--- a/templates/user_profile/registration_profile_info.html
+++ b/templates/user_profile/registration_profile_info.html
@@ -34,15 +34,15 @@
                                                     <input type="text" placeholder="" class="form-control" value="{% if middle_name %}{{middle_name}}{% endif %}" name="middle_name">
                                                 </div>
                                             </div>
-                                            <div class="col-sm-12 col-md-3 col-lg-3">
-                                                <div class="form-group">
-                                                    <label>{% trans 'Mobile Number' %} <em>*</em></label>
-                                                    <input type="text" placeholder=""  maxlength="10" class="form-control" value="{% if mobile_number %}{{mobile_number}}{% endif %}" name="mobile_number">
+                                               <div class="col-sm-12 col-md-3 col-lg-3">
+                                                  <div class="form-group ">
+                                                    <label>{{ form.mobile_no.label }} <em>*</em></label>
+                                                    {{ form.mobile_no }}
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-md-3 col-lg-3">
                                                 <div class="form-group">
-                                                    <label>{% trans 'Email' %} <em>*</em></label>
+                                                     <label>{% trans 'Email' %} <em>*</em></label>
                                                     <input type="text" placeholder="" class="form-control" value="{% if email %}{{email}}{% endif %}" name="email">
                                                 </div>
                                             </div>
@@ -69,28 +69,28 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                                <div class="form-group">
-                                                     <label>{% trans 'Pincode' %}</label>
-                                                    <input type="text" placeholder="" maxlength="6" class="form-control" value="{% if pincode %}{{pincode}}{% endif %}" name="pincode">
+                                               <div class="form-group ">
+                                                    <label>{{ form.pincode.label }}</label>
+                                                    {{ form.pincode }}
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-md-6 col-lg-6">
-                                                <div class="form-group">
-                                                     <label>{% trans 'Address 1' %}</label>
-                                                    <input type="text" placeholder="" class="form-control" value="{% if address_line1 %}{{address_line1}}{% endif %}" name="address_1">
+                                                <div class="form-group ">
+                                                    <label>{{ form.address_line1.label }}</label>
+                                                    {{ form.address_line1 }}
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-md-6 col-lg-6">
-                                                <div class="form-group">
-                                                   <label>{% trans 'Address 2' %}</label>
-                                                    <input type="text" placeholder="" class="form-control" value="{% if address_line2 %}{{address_line2}}{% endif %}" name="address_2">
+                                                <div class="form-group ">
+                                                    <label>{{ form.address_line2.label }}</label>
+                                                    {{ form.address_line2 }}
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <input type="hidden" name="group_id" value="{{group_id}}">
-                                    <input type="hidden" name="sesion_group_id" value="{{sesion_group_id}}">
-                                     <input type="hidden" name="mbl_group_id" value="{{mbl_group_id}}">
+                                    <!-- <input type="hidden" name="sesion_group_id" value="{{sesion_group_id}}"> -->
+                                     <!-- <input type="hidden" name="mbl_group_id" value="{{mbl_group_id}}"> -->
                                     <div class="continue_button">
                                     <button class="go_back" onclick="location.href='{% url 'user_profile:registration_step' %}'" type="button">Go Back </button>
                                     <button class="next"  type="submit">Finish </button>
